# middleware/authenticate.js
@@ -1,9 +1,9 @@
 const jwt = require("jsonwebtoken");
 
 const verifyToken = (req, res, next) => {
-    const authHeader = req.headers.authorization;
+    const authHeader = req.headers["authorization"];
     if (authHeader) {
-        const token = authHeader.split(" ")[1];
+        const token = authHeader.split(' ')[1];
         jwt.verify(token, process.env.JWT_SECRET, (err, user) => {
             if (err) res.status(401).json({ err, message: "Unauthorized Access - No Token Provided!" });
             req.user = user;
